[gd_scene load_steps=5 format=2]

[ext_resource path="res://Level.tscn" type="PackedScene" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]
[ext_resource path="res://Camera.gd" type="Script" id=3]
[ext_resource path="res://UI.tscn" type="PackedScene" id=4]

[node name="Main" type="Node"]
script = ExtResource( 2 )

[node name="SplitScreenContainer" type="GridContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/vseparation = 0
custom_constants/hseparation = 0
columns = 2

[node name="ViewportContainer1" type="ViewportContainer" parent="SplitScreenContainer"]
margin_right = 360.0
margin_bottom = 480.0
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true

[node name="Viewport1" type="Viewport" parent="SplitScreenContainer/ViewportContainer1"]
size = Vector2( 360, 480 )
handle_input_locally = false
render_target_update_mode = 3

[node name="Camera2D1" type="Camera2D" parent="SplitScreenContainer/ViewportContainer1/Viewport1"]
current = true
script = ExtResource( 3 )

[node name="Level" parent="SplitScreenContainer/ViewportContainer1/Viewport1" instance=ExtResource( 1 )]

[node name="UI" parent="SplitScreenContainer/ViewportContainer1/Viewport1" instance=ExtResource( 4 )]

[node name="ViewportContainer2" type="ViewportContainer" parent="SplitScreenContainer"]
margin_left = 360.0
margin_right = 720.0
margin_bottom = 480.0
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true

[node name="Viewport2" type="Viewport" parent="SplitScreenContainer/ViewportContainer2"]
size = Vector2( 360, 480 )
handle_input_locally = false
render_target_update_mode = 3

[node name="Camera2D2" type="Camera2D" parent="SplitScreenContainer/ViewportContainer2/Viewport2"]
current = true
script = ExtResource( 3 )

[node name="UI" parent="SplitScreenContainer/ViewportContainer2/Viewport2" instance=ExtResource( 4 )]

[node name="MiniMap" type="ViewportContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -92.0
margin_top = -149.0
margin_right = 92.0
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true

[node name="Viewport" type="Viewport" parent="MiniMap"]
size = Vector2( 184, 149 )
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 3

[node name="Camera2D" type="Camera2D" parent="MiniMap/Viewport"]
offset = Vector2( 360, 240 )
current = true
zoom = Vector2( 7, 7 )
